kubernetes/apps/base/whoops/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: whoops
  namespace: whoops
spec:
  selector:
    matchLabels:
      app: whoops
  replicas: 1
  template:
    metadata:
      labels:
        app: whoops
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
        runAsGroup: 1000
      containers:
        - name: whoops
          image: docker.io/kryoseu/whoops:v1.1.1
          imagePullPolicy: IfNotPresent
          securityContext:
            privileged: false
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
          ports:
            - containerPort: 5000
