kubernetes/apps/base/whoops/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: whoops
  namespace: whoops
spec:
  selector:
    app: whoops
  ports:
    - protocol: "TCP"
      port: 6000
      targetPort: 5000
